Small css fix for overflowing list

--- a/src/client/src/app/new-game/new-game.component.scss
+++ b/src/client/src/app/new-game/new-game.component.scss
@@ -23,6 +23,7 @@ div:has(h2):has(.dialog-content) {
 
         .starting-data {
             height: 50%;
+            overflow: hidden;
 
             .others-starting-list {
                 overflow-y: scroll;
